k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: fastapi-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: fastapi
